Closed
Bug 469663
Opened 17 years ago
Closed 17 years ago
common/webbrowserchrome cleanup patch
Categories
(Core Graveyard :: Embedding: APIs, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: tobias.hunger, Unassigned)
References
Details
Attachments
(1 file, 1 obsolete file)
|
13.19 KB,
patch
|
mfinkle
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.0.4) Gecko/2008111616 Ubuntu/9.04 (jaunty) Firefox/3.0.4
Build Identifier: hg rev. 0c3baa33bba5
The attached patch does some cleanup to common/WebBrowserChrome.(h|cpp).
This patch does not change the code in any non-trivial way.
It does fix warnings, whitespace issues, renames a couple of variables to be in sync with the coding standard, etc. only.
Reproducible: Always
| Reporter | ||
Comment 1•17 years ago
|
||
The actual patch.
| Reporter | ||
Comment 2•17 years ago
|
||
Depend on the patch introducing MOZ_UNUSED which we use to suppress warnings on unused parameters.
Depends on: 469647
| Reporter | ||
Comment 3•17 years ago
|
||
Do not use braces after if (...) when only one command is used.
Attachment #353023 -
Attachment is obsolete: true
| Reporter | ||
Updated•17 years ago
|
Attachment #353035 -
Flags: review?(mark.finkle)
Comment 4•17 years ago
|
||
Status: UNCONFIRMED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Comment 5•17 years ago
|
||
Comment on attachment 353035 [details] [diff] [review]
WebBrowserChrome cleanup patch v1.1
removed the MOZ_UNUSED macro
Attachment #353035 -
Flags: review?(mark.finkle) → review+
Updated•7 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•