Bug 469663: webbrowser cleanup, r=mfinkle